# cnc-tool-wear-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
notebooks/: 01_tool_wear_analysis.ipynb
scripts/: generate_data.py  train.py
src/: app.py  data_generator.py  predictor.py
tests/: test_generator.py
